--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
 	"name": "react-third-hand",
 	"author": "yaroslavweb",
-	"version": "0.1.6",
+	"description": "Workspace customizer for react app",
+	"version": "0.1.0",
+	"homepage": "https://github.com/YaroslavWeb/react-third-hand",
 	"license": "MIT",
 	"bin": "dist/cli.js",
 	"engines": {
