--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "react-third-hand",
 	"author": "yaroslavweb",
 	"description": "Workspace customizer for react app",
-	"version": "1.0.4",
+	"version": "1.0.5",
 	"homepage": "https://github.com/YaroslavWeb/react-third-hand",
 	"license": "MIT",
 	"bin": "dist/cli.js",
@@ -20,7 +20,8 @@
 		"ink-multi-select": "^2.0.0",
 		"ink-select-input": "^4.2.1",
 		"meow": "^9.0.0",
-		"react": "^17.0.1"
+		"react": "^17.0.1",
+		"react-third-hand": "^1.0.4"
 	},
 	"devDependencies": {
 		"@ava/typescript": "^3.0.1",
